--- a/src/Ads/AppBundle/Resources/views/App/index.html.twig
+++ b/src/Ads/AppBundle/Resources/views/App/index.html.twig
@@ -4,6 +4,7 @@
   <div class="posts">
     {% for post in posts %}
       <div class="post">
+        <img src="{{ vich_uploader_asset(post.image, 'file') | imagine_filter('thumbnail') }}" />
         {{ parse_hashtag(post.description) }}
       </div>
     {% endfor %}
