--- a/src/Ads/AppBundle/Resources/public/less/ads.less
+++ b/src/Ads/AppBundle/Resources/public/less/ads.less
@@ -1,2 +1,5 @@
 @import "./bootstrap/bootstrap.less";
+@import "./variables.less";
+@import "./mixins.less";
+@import "./overrides.less";
 @import "./base/layout.less";
