--- a/src/Ads/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Ads/AppBundle/Resources/public/less/base/layout.less
@@ -1,3 +1,26 @@
-html {
+#posts {
+  margin: 0 auto 14px auto;
+}
 
+.post {
+  width: 236px;
+  margin: 14px 7px 0 7px;
+  background-color: white;
+  border: 1px solid @border-color;
+}
+
+.pic {
+  width: 234px;
+  height: 234px;
+
+  img {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.desc {
+  padding: 7px 14px;
+  .hyphens(word-break);
+  word-break: break-all;
 }
