--- a/src/Ads/AppBundle/Resources/views/Includes/post.html.twig
+++ b/src/Ads/AppBundle/Resources/views/Includes/post.html.twig
@@ -5,7 +5,7 @@
   <div>
 =======
   <div class="pic">
-    <img src="{{ vich_uploader_asset(post.image, 'file') | imagine_filter('thumbnail') }}" />
+    <img src="{{ vich_uploader_asset(post.image, 'file')|imagine_filter('thumbnail') }}">
   </div>
   <div class="desc">
     <p>{{ parse_hashtag(post.description) }}</p>
