--- a/src/Ads/AppBundle/Resources/views/Includes/post.html.twig
+++ b/src/Ads/AppBundle/Resources/views/Includes/post.html.twig
@@ -1,6 +1,8 @@
 <div class="post">
   <div class="pic">
-    <img src="{{ vich_uploader_asset(post.image, 'file') | imagine_filter('thumbnail') }}" width="{{ thumb_width }}" height="{{ post.thumbHeight }}" />
+    <div style="width: {{thumb_width}}px; height: {{ post.thumbHeight }}px;">
+      <img src="{{ vich_uploader_asset(post.image, 'file') | imagine_filter('thumbnail') }}" width="{{ thumb_width }}" height="{{ post.thumbHeight }}" />
+    </div>
   </div>
   <div class="desc">
     <p>{{ parse_hashtag(post.description) }}</p>
