--- a/src/Ads/AppBundle/Resources/views/Post/add.html.twig
+++ b/src/Ads/AppBundle/Resources/views/Post/add.html.twig
@@ -33,6 +33,9 @@
       </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
   </div><!-- /.modal -->
+
+  {{ elfinder_tinymce_init4() }}
+  {{ tinymce_init() }}
 {% endblock %}
 
 {% block javascripts %}
