--- a/src/Ads/AppBundle/Resources/views/Wall/add.html.twig
+++ b/src/Ads/AppBundle/Resources/views/Wall/add.html.twig
@@ -5,6 +5,6 @@
     {{ form_errors(form) }}
     {{ form_rest(form) }}
 
-    <input type="submit" />
+    <input type="submit">
   {{ form_end(form) }}
 {% endblock %}
