--- a/src/Ads/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Ads/UserBundle/Resources/views/Security/login.html.twig
@@ -8,20 +8,20 @@
   {% endif %}
 
   <form action="{{ path("fos_user_security_check") }}" method="post">
-      <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
+      <input type="hidden" name="_csrf_token" value="{{ csrf_token }}">
 
       <label for="username">{{ 'security.login.username'|trans }}</label>
-      <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" />
+      <input type="text" id="username" name="_username" value="{{ last_username }}" required="required">
 
       <label for="password">{{ 'security.login.password'|trans }}</label>
-      <input type="password" id="password" name="_password" required="required" />
+      <input type="password" id="password" name="_password" required="required">
 
-      <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
+      <input type="checkbox" id="remember_me" name="_remember_me" value="on">
       <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
 
-      <input type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
+      <input type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}">
   </form>
   {% for owner in hwi_oauth_resource_owners() %}
-  <a href="{{ hwi_oauth_login_url(owner) }}">{{ owner | trans({}, 'HWIOAuthBundle') }}</a> <br />
+  <a href="{{ hwi_oauth_login_url(owner) }}">{{ owner|trans({}, 'HWIOAuthBundle') }}</a> <br>
   {% endfor %}
 {% endblock %}
