--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -47,12 +47,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Brand</a>
+              <a class="navbar-brand" href="{{ path('homepage') }}">Brand</a>
             </div>
 
             <div class="collapse navbar-collapse navbar-ex1-collapse">
-              <form class="navbar-form navbar-left" style="position: relative;" role="search">
-                <input id="search" type="text" class="form-control" placeholder="Search">
+              <form action="{{ path('ads_app_search') }}" class="navbar-form navbar-left" style="position: relative;" role="search">
+                <input id="search" type="text" class="form-control" placeholder="Search" name="q" value="{{ app.request.query.get('q') }}" >
                 <button class="search-btn" type="submit">
                   <span aria-hidden="true" data-icon="&#xe006;"></span>
                 </button>
