--- a/src/Adstacy/AppBundle/Resources/views/Post/add.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Post/add.html.twig
@@ -33,6 +33,7 @@
         <div class="modal-body">
           <div class="modal-errors"></div>
           {{ form_row(wallForm.name) }}
+          {{ form_row(wallForm.description) }}
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
