--- a/src/Ads/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Ads/AppBundle/Resources/public/less/base/layout.less
@@ -14,15 +14,11 @@ body {
 }
 
 .pic {
-  width: 234px;
-
-  img {
-    width: 100%;
-    height: 100%;
-  }
+  background-image: url('../img/diagonal-line.png');
 }
 
 .desc {
+  border-top: 1px solid @border-color;
   padding: 7px 14px;
 }
 
