add img loading effect when thumbnail still loading.

--- a/src/Ads/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Ads/AppBundle/Resources/public/less/base/layout.less
@@ -15,6 +15,10 @@ body {
 
 .pic {
   background-image: url('../img/diagonal-line.png');
+
+  img {
+    background: url('../img/loading.gif') no-repeat center center;
+  }
 }
 
 .desc {
