Add social connect to setting page.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -13,6 +13,7 @@
       {% stylesheets filter='cssrewrite, uglifycss'
         'bundles/adstacyapp/less/adstacy.less'
         'bundles/adstacyapp/css/font-awesome.css'
+        'bundles/adstacyapp/css/social-buttons.css'
         'bundles/adstacyapp/css/brand.css'
       %}
         <link href="{{ asset_url }}" type="text/css" rel="stylesheet">
