--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -6,6 +6,10 @@ body {
   margin: 0 auto 14px auto;
 }
 
+#header-container {
+  margin: auto;
+}
+
 .post {
   width: 236px;
   margin: 14px 7px 0 7px;
