Disable masonry transition.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -96,6 +96,7 @@
           columnWidth: 250,
           isFitWidth: true,
           isInitLayout: false,
+          transitionDuration: 0,
           itemSelector: '.post'
         });
         $posts.masonry('on', 'layoutComplete', function(msnryInstance) {
