Add infinite scroll.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -32,6 +32,7 @@
         '@AdstacyAppBundle/Resources/public/js/jquery.ui.totop.min.js'
         '@AdstacyAppBundle/Resources/public/js/masonry.pkgd.min.js'
         '@AdstacyAppBundle/Resources/public/js/jquery.lazyload.min.js'
+        '@AdstacyAppBundle/Resources/public/js/jquery.jscroll.js'
         'bundles/fosjsrouting/js/router.js'
       %}
         <script src="{{ asset_url }}" type="text/javascript"></script>
