Add login form to navbar.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -59,3 +59,7 @@ body {
     color: darken(@input-color-placeholder, 50%);
   }
 }
+
+#main-header .navbar-right .dropdown-menu {
+  padding: 20px;
+}
