--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -64,15 +64,27 @@
                 </button>
               </form>
               <ul class="nav navbar-nav navbar-right">
+                {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                 <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Login <b class="caret"></b></a>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ app.user.username }}<b class="caret"></b></a>
                   <ul class="dropdown-menu">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li><a href="#">Separated link</a></li>
+                    <li><a href="{{ path('fos_user_profile_edit') }}">Settings</a></li>
+                    <li><a href="{{ path('fos_user_security_logout') }}">Logout</a></li>
                   </ul>
                 </li>
+                {% else %}
+                  <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Login <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                      <li>
+                        {{ form_login() }}
+                      </li>
+                      {% for owner in hwi_oauth_resource_owners() %}
+                      <li><a class="btn btn-primary btn-block btn-lg btn-{{ owner }}" href="{{ hwi_oauth_login_url(owner) }}">{{ owner|trans({}, 'HWIOAuthBundle') }}</a></li>
+                      {% endfor %}
+                    </ul>
+                  </li>
+                {% endif %}
               </ul>
             </div>
           </div>
