--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -2,7 +2,7 @@ body {
   padding-top: 70px;
 }
 
-#posts {
+#ads {
   margin: 0 auto 14px auto;
 }
 
@@ -10,7 +10,7 @@ body {
   margin: auto;
 }
 
-.post {
+.ad {
   width: 236px;
   margin: 14px 7px 0 7px;
   background-color: white;
