--- a/src/Adstacy/AppBundle/Resources/views/Includes/ads_search.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Includes/ads_search.html.twig
@@ -1,5 +1,5 @@
-{% for post in paginator.getCurrentPageResults %}
-  {% include 'AdstacyAppBundle:Includes:post.html.twig' with {post: post} %}
+{% for ad in paginator.getCurrentPageResults %}
+  {% include 'AdstacyAppBundle:Includes:ad.html.twig' with {ad: ad} %}
 {% endfor %}
 {% if paginator.hasNextPage %}
   {% set params = {page: paginator.getNextPage} | merge(app.request.query.all) %}
